--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.2",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "pnpm build:llms-txt && next build",
     "build:llms-txt": "tsx src/scripts/build-llms-text-files.ts",
     "start": "next start",
